--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -246,19 +246,34 @@ a{
   align-items: center;
   text-align: center;
   flex-direction: column;
-  .foundations__box1{
-    width: 37vw;
+  height: 100vh;
+  h1{
+    font-size: 2.375rem;
+    line-height: 52px;
   }
-  .foundations__sections{
-    margin: 10px;
+  .foundations__box1{
+    width: 100%;
+    p{
+      margin: 0 auto 66px auto;
+      width: 640px;
+      font-size: 1.375rem;
+    }
   }
   .foundations__choose--box{
+    width: 708px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 10px;
-
+    margin: 83px auto 83px auto;
+    .foundations__sections{
+      width: 208px;
+      height: 79px;
+      border: 1px solid transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
 .pagination__box1{
@@ -270,6 +285,46 @@ a{
   width: 75vw;
   height: 1px;
   background-color: $grey__border;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 31px;
+  margin-bottom: 33px;
 }
+.foundations__sections{
+  cursor: pointer;
+}
+.foundations__section2{
+  margin-left: 149px;
+  margin-right: 149px;
+}
+.content__to--show{
+  h2{
+    font-size: 1.625rem;
+    text-align: left;
+  }
+  p{
+    font-size: 1.125rem;
+  }
+}
+.page__number--box{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .page__number--ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    .page__number--li{
+      margin: 10px;
+      width: 40px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+  }
+}
+
+
