--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,7 +53,16 @@ a{
   .home__menu--ul {
     display: flex;
     line-height: 42px;
-
+    button{
+      border: none;
+      background-color: transparent;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      outline: none;
+      font-size: 1.125rem;
+      color: black;
+    }
     li {
       padding: 9px 20px 9px 20px;
       font-size: 1.125rem;
@@ -492,6 +501,7 @@ label {
     font-weight: 600;
   }
   .login__layout--form {
+    position: relative;
     width: 384.5px;
     height: 235px;
     background-color: $grey__idea;
@@ -524,12 +534,18 @@ label {
   }
   ul{
     display: flex;
-    width: 100%;
+    width: 504px;
     justify-content: space-between;
   }
 }
+.login__buttons--position{
+  position: absolute;
+  left: -16%;
+  bottom: -101px;
+}
 //-------------------------------------------------REGISTER-LAYOUT----------------------------------------------------
 .register__layout--form{
+  position: relative;
   width: 384.5px;
   height: 328px;
   background-color: $grey__idea;
