--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -561,3 +561,9 @@ label {
 .login__label3{
   margin-top: 32px;
 }
+//-------------------------------------------------LOGOUT-LAYOUT----------------------------------------------------
+.logout__button--style{
+  display: flex;
+  justify-content: center;
+  font-size: 1.125rem;
+}
