--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -567,3 +567,40 @@ label {
   justify-content: center;
   font-size: 1.125rem;
 }
+//-------------------------------------------------IMG-COMPONENT----------------------------------------------------
+.img__container{
+  line-height: 60px;
+  p{
+    font-weight: 300;
+    margin-bottom: 50px;
+  }
+}
+.form__picture{
+  background-image: url("../assets/Decoration.svg");
+  width: 253px;
+  height: 33px;
+  margin: 25px auto 20px auto;
+}
+
+.squares__container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+
+  .squares{
+    position: relative;
+    width: 190px;
+    height: 190px;
+    border: 0.75px solid #3C3C3C;
+    transform: rotate(45deg);
+    p{
+      position: absolute;
+      font-size: 3rem;
+      transform: rotate(-45deg);
+      top: -9px;
+      bottom: 150px;
+      padding: 20px 15px 9px 4px;
+    }
+  }
+}
